--- a/Castlevania.html
+++ b/Castlevania.html
@@ -1,13 +1,46 @@
-<h1><center>Castlevania</center></h1>
-<br>
-<br>
-A série Castlevania teve início no ano de 1986, lançada para o <a href="https://en.wikipedia.org/wiki/Famicom_Disk_System">Famicom Disk System</a> no Japão. A série foca-se na eterna luta entre <a href="https://en.wikipedia.org/wiki/Vlad_the_Impaler">Drácula</a> e o clã Belmont, caçadores de vampiros que passam seu conhecimento para cada nova geração a fim de impedir que o mal do conde retorne ao mundo.
-<br>
-<br>
-Um gameplay completo do jogo pode ser assistido abaixo:
-<br>
-<br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/lRcHk8ixyKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-<script>
-alert("Vamos falar de vampiros e chicotadas")
-</script>
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+	<meta charset="utf-8">
+	<title>Legado Castlevania</title>
+	<link rel="stylesheet" href="CastlevaniaStyle.css">
+</head>
+
+<body>
+	<header>
+		<h1><center>Quatro décadas derrotando o mal</center></h1>
+	</header>
+	<img id="dracula" img src="dracula.jpg">
+	<div class="principal">
+	<h2><center>O início da saga</center></h2>
+
+<p>Uma das maiores franquias da história dos games teve início em 1986, nascida da mente do produtor e designer Akihito Nagata. Tomando inspiração dos filmes de terror góticos dos estúdios Universal, lançados na década de 1930, Castlevania coloca o jogador na pele de Simon Belmont, último na linhagem de um clã especializado em caçar vampiros, que tem por missão principal combater o conde Drácula, quando este renasce na Europa a cada 100 anos.</p>
+
+<p>O primeiro jogo seria lançado em 1986 para o <a href="https://en.wikipedia.org/wiki/Famicom_Disk_System">Famicom Disk System</a>, apenas no Japão, mas não tardaria a receber uma localização para o mercado ocidental.</p>
+
+<center><img src="cas1.png"><img src="cas2.png"><img src="cas3.png"><img src="cas4.png"><img src="cas5.png"></center>
+
+<h3><center><strong>Curiosidades sobre o game</strong></center></h3>
+
+<p><em><strong>Trivia 1:</em></strong> O protagonista do primeiro game quase foi chamado de "Peter Dante", como referências a Peter Cushing, que interpretou o caçador Van Helsing nos filmes de Drácula da produtora britânica <a href="https://www.hammerfilms.com">Hammer</a>, e a Dante Alighieri.</p>
+
+<p><em><strong>Trivia 2:</em></strong> Originalmente, Simon seria capaz de se transformar em um lobisomem. A ideia foi abandonada ainda nos estágios iniciais da produção.</p>
+
+<p><em><strong>Trivia 3:</em></strong> A estaca de madeira, como dita a tradição dos contos de vampiros, seria a única arma capaz de destruir Drácula na batalha final. A ideia também foi abandonada, mas a estaca voltaria como um dos itens mais poderosos da continuação.</p>
+
+<div class="serie">
+	<h3><center>Títulos marcantes da série</center></h3>
+	<ul>
+		<li class="itens">Castlevania III: Dracula's Curse (NES)</li>
+		<li class="itens">Super Castlevania IV (Super Nintendo)</li>
+		<li class="itens">Castlevania Bloodlines (Mega Drive)</li>
+		<li class="itens">Castlevania: Rondo of Blood (PC Engine/Turbografx 16)</li>
+		<li class="itens">Castlevania: Simphony of the Night (Playstation)</li>
+		<li class="itens">Castlevania: Aria of Sorrow (Game Boy Advance)</li>
+		<li class="itens">Castlevania: Dawn of Sorrow (Nintendo DS)</li>
+	</ul>
+
+	<img src="alucard.png" class="alucard">
+
+</body>
