Criei páginas para Castlevania 2 e 3 e linkei todos os HTMLs

--- a/Castlevania.html
+++ b/Castlevania.html
@@ -3,15 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Legado Castlevania</title>
+	<title>Castlevania</title>
 	<link rel="stylesheet" href="CastlevaniaStyle.css">
 </head>
 
 <body>
 	<header>
-		<h1><center>Quatro décadas derrotando o mal</center></h1>
 	</header>
 	<img id="dracula" img src="dracula.jpg">
+	</header>
+	<main>
 	<div class="principal">
 	<h2><center>O início da saga</center></h2>
 
@@ -19,28 +20,33 @@
 
 <p>O primeiro jogo seria lançado em 1986 para o <a href="https://en.wikipedia.org/wiki/Famicom_Disk_System">Famicom Disk System</a>, apenas no Japão, mas não tardaria a receber uma localização para o mercado ocidental.</p>
 
-<center><img src="cas1.png"><img src="cas2.png"><img src="cas3.png"><img src="cas4.png"><img src="cas5.png"></center>
+<center><img src="cas1.png"><img src="cas2.png"><img src="cas3.png"></center>
 
-<h3><center><strong>Curiosidades sobre o game</strong></center></h3>
+<p>A história do game é simples, mas cativante. Vlad Tepes, o conde Drácula, ressuscita na Wallachia a cada 100 anos, e no controle de um exército profano, declara guerra a humanidade. Os únicos capazes de se oporem ao barbarismo do conde são os guerreiros do clã Belmont, antes temidos na Europa por sua imensa força e habilidades sobrehumanas. Agora, recai sobre os jovens ombros de Simon Belmont a ingrata tarefa de derrotar Drácula e trazer a paz de volta a região.</p>
 
-<p><em><strong>Trivia 1:</em></strong> O protagonista do primeiro game quase foi chamado de "Peter Dante", como referências a Peter Cushing, que interpretou o caçador Van Helsing nos filmes de Drácula da produtora britânica <a href="https://www.hammerfilms.com">Hammer</a>, e a Dante Alighieri.</p>
+<p>Castlevania possui uma estrutura simples: Seis fases divididas em 18 estágios com movimentação lateral. O jogador só precisa avançar da esquerda para a direita, evitando ataques inimigos, saltando abismos e chicoteando tudo que encontrar pela frente. Claro, falar é mais fácil do que fazer, e Castlevania é conhecido como um dos títulos mais difíceis de todos os tempos.</p>
 
-<p><em><strong>Trivia 2:</em></strong> Originalmente, Simon seria capaz de se transformar em um lobisomem. A ideia foi abandonada ainda nos estágios iniciais da produção.</p>
+<center><img src="cas4.png"><img src="cas5.png"><img src="cas6.png"></center>
 
-<p><em><strong>Trivia 3:</em></strong> A estaca de madeira, como dita a tradição dos contos de vampiros, seria a única arma capaz de destruir Drácula na batalha final. A ideia também foi abandonada, mas a estaca voltaria como um dos itens mais poderosos da continuação.</p>
+<p>As versões americana e japonesa eram razoavelmente diferentes uma da outra. Originalmente, a versão nipônica do game possuia um sistema de Save, permitindo que o jogador registrasse o progresso de sua aventura e continuasse de onde parou, quando bem entendesse. Este funcionamento não estava disponível no cartucho americano, o que forçava os jogadores a terminarem tudo em uma partida só.</p>
+
+<p>Eventualmente, a versão japonesa também recebeu um cartucho, devido ao encerramento da produção do Famicom Disk System. O cartucho lançado na terra do sol nascente possuia um “Easy Mode”, que diminuia consideravelmente a dificuldade do game. Nela, o jogador não perdia mais a arma especial caso morresse, e não era mais empurrado para trás quando recebia dano, o que o salvava de cair nos inúmeros abismos do cenário.</p>
+
+<p>Ambas as versões estão disponíveis na coletânea Castlevania Collection, disponível para Nintendo Switch, Playstation 4 e Xbox One.</p>
+
 
 <div class="serie">
-	<h3><center>Títulos marcantes da série</center></h3>
+	<h3><center><strong>Curiosidades sobre o game</strong></center></h3>
 	<ul>
-		<li class="itens">Castlevania III: Dracula's Curse (NES)</li>
-		<li class="itens">Super Castlevania IV (Super Nintendo)</li>
-		<li class="itens">Castlevania Bloodlines (Mega Drive)</li>
-		<li class="itens">Castlevania: Rondo of Blood (PC Engine/Turbografx 16)</li>
-		<li class="itens">Castlevania: Simphony of the Night (Playstation)</li>
-		<li class="itens">Castlevania: Aria of Sorrow (Game Boy Advance)</li>
-		<li class="itens">Castlevania: Dawn of Sorrow (Nintendo DS)</li>
+		<li class="itens"><p><em><strong>Trivia 1:</em></strong> O protagonista do primeiro game quase foi chamado de "Peter Dante", como referências a Peter Cushing, que interpretou o caçador Van Helsing nos filmes de Drácula da produtora britânica <a href="https://www.hammerfilms.com">Hammer</a>, e a Dante Alighieri.</p></li>
+		<li class="itens"><p><em><strong>Trivia 2:</em></strong> Originalmente, Simon seria capaz de se transformar em um lobisomem. A ideia foi abandonada ainda nos estágios iniciais da produção.</p></li>
+		<li class="itens"><p><em><strong>Trivia 3:</em></strong> A estaca de madeira, como dita a tradição dos contos de vampiros, seria a única arma capaz de destruir Drácula na batalha final. A ideia também foi abandonada, mas a estaca voltaria como um dos itens mais poderosos da continuação.</p></li>
+		<li class="itens"><p><em><strong>Trivia 4:</em></strong> Simon Belmont foi sumariamente ignorado na adaptação animada da Netflix, que preferiu narrar as histórias de Trevor Belmont (Castlevania III: Dracula's Curse) e Richter Belmont (Saga Rondo of Blood), seu ancestral e descendente, respectivamente.</p></li>
 	</ul>
-
-	<img src="alucard.png" class="alucard">
-
+		<img src="capajaponesa1.jpg" class="alucard">
+	</main>
+	<footer>
+		<a href="Castleindex.html"><img src="simon.gif" class="simon"><h3> Voltar</h3></a>
+		<p class="copyright">&copy;Copyright Konami 1988, 2021</p>
+	</footer>
 </body>
