--- a/Castleindex.html
+++ b/Castleindex.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -10,7 +9,7 @@
 <body>
 	<header>
 		<div class="castelo">
-		<h1><img src="castlelogo.jpg"></h1>
+		<h1><img id="marblelogo" img src="cristallogo.png"></h1>
 		<nav>
 			<ul>
 				<li><h1><a href="https://castlevania.fandom.com/wiki/Castlevania_Wiki"><img src="whip.png"> Wiki</a></h1></li>
@@ -35,6 +34,21 @@
 			<a href="Castlevania3.html">
 			<img src="Castle3.jpg">
 			<p class="Console">Nintendo Entertainment System</p></a>
+		</li>
+		<li><h2>Super Castlevania IV</h2>
+			<a href="construcao.html">
+			<img src="castle4.png">
+			<p class="Console">Super NES</p></a>
+		</li>
+		<li><h2>Castlevania Bloodlines/The New Generation/Vampire Killer</h2>
+			<a href="construcao.html">
+			<img src="castleblood.jpg">
+			<p class="Console">Sega Genesis/Mega Drive</p></a>
+		</li>
+		<li><h2>Castlevania: Rondo of Blood</h2>
+			<a href="construcao.html">
+			<img src="castlerondo.jpg">
+			<p class="Console">PC Engine/Turbografx 16</p></a>
 		</li>
 	</main>
 	<footer>
